<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Action Driving School</string>
    <string name="login_failed">Kwinjira byanze</string>
    <string name="title_home">Ahabanza</string>
    <string name="title_profile">Umwirondoro</string>
    <string name="dont_have_account">Nta konte ufite?</string>
    <string name="hello_blank_fragment">Muraho</string>
    <string name="next">Igikurikira</string>
    <string name="recent_pdfs">PDF za vuba</string>
    <string name="featured_pdfs">PDF zatoranyijwe</string>
    <string name="empty_pdfs">Nta PDF zihari</string>
    <string name="previous">Subira Inyuma</string>
    <string name="current_password">Ijambobanga ririho ubu</string>
    <string name="new_password">Ijambobanga rishya</string>
    <string name="confirm_new_password">Emeza ijambobanga rishya</string>
    <string name="save_changes">Bika impinduka</string>
    <string name="change_password">Hindura ijambobanga</string>
    <string name="forgot_your_password">Wibagiwe ijambobanga ryawe?</string>
    <string name="no_worries_enter_your_email_below_and_we_will_send_you_a_link_to_reset_it">
        Ntacyo! Shyiramo imeri yawe hasi, tuzohereza link yo gusubiza ijambobanga ryawe.
    </string>
    <string name="send_reset_link">Ohereza link yo gusubiza</string>
    <string name="welcome_back">Murakaza neza!</string>
    <string name="email_or_phone_number">Nimero ya telefone</string>
    <string name="forgot_password_hint">Imeri cyangwa nimero ya telefone</string>
    <string name="sign_up">Iyandikishe</string>
    <string name="enter_verification_code">Shyiramo kode yemeza</string>
    <string name="enter_the_6_digit_code_sent_to_your_email_address">
        Shyiramo kode y\'inyuguti 6 yoherejwe kuri imeri yawe.
    </string>
    <string name="verification_code">Kode y\'emeza</string>
    <string name="verify">Emeza</string>
    <string name="didn_t_receive_code_resend">Ntabwo wakiriye kode? Ohereza ukundi</string>
    <string name="fungura_konti_nshya7">Fungura konte nshya</string>
    <string name="wuzuze_imyirondoro_yawe2">Wuzuze imyirondoro yawe</string>
    <string name="izina_ry_ababyeyi">Amazina *</string>
    <string name="telefoni">Andika Nimero ya Telefone yawe *</string>
    <string name="usanzwe_ufite_konti">Usanzwe ukoresha apulikasiyo?</string>
    <string name="injira1">Injira</string>
    <string name="create_a_new_password">Hindura ijambobanga</string>
    <string name="your_new_password_must_be_different_from_previous_ones">
        Ijambobanga ryawe rishya rigomba kuba ritandukanye n\'iryari rikoreshwa mbere.
    </string>
    <string name="new_password8">Ijambobanga rishya</string>
    <string name="confirm_new_password8">Emeza ijambobanga rishya</string>
    <string name="reset_password">Subiza ijambobanga</string>
    <string name="welcome_to_driving_school">Action Driving School</string>
    <string name="create_an_account">Ni ba uri mushya Kanda Hano</string>
    <string name="login_to_your_account">Kanda Hano</string>
    <string name="by_continuing_you_agree_to_our_terms_of_service_and_privacy_policy">
        Ukomeje, wemeye Amategeko y\'Akazi n\'Amabwiriza y\'Ibanga.
    </string>
    <string name="classes_fragment">Amasomo</string>
    <string name="exams_fragment">Ibizamini</string>
    <string name="lessons_fragment">Amasomo</string>
    <string name="settings">Amabwiriza</string>
    <string name="error_loading_tests">Habaye ikibazo mu gufungura ibizamini</string>
    <string name="pdf_title8">Izina rya PDF</string>
    <string name="author_name44">Izina ry\'umwanditsi</string>
    <string name="_100_pages">Paji 100</string>
    <string name="_4_5_123">4.5 (123)</string>
    <string name="english">Icyongereza</string>
    <string name="french">Ikifaransa</string>
    <string name="kinyarwanda">Ikinyarwanda</string>
    <string name="home">Ahabanza</string>
    <string name="exams">Ibizamini</string>
    <string name="materials">Igazeti</string>
    <string name="profile">Umwirondoro</string>
    <string name="exams4">Ibizamini</string>
    <string name="learning_materials5">Igazeti</string>
    <string name="share52">Sangiza</string>
    <string name="whatsapp_group14">WhatsApp</string>
    <string name="logout152">Sohoka</string>
    <string name="bookmark">Bookmark</string>
    <string name="submit">Soza ikizamini</string>
    <string name="fill_all_fields">Nyamuneka wuzuze ibice byose</string>
    <string name="passwords_not_match">Amaijambobanga ntahura</string>
    <string name="something_went_wrong">Habaye ikibazo</string>
    <string name="unknown_error">Habayemo ikibazo kitazwi</string>
    <string name="no_whatsapp_groups">Nta matsinda ya WhatsApp akora abonetse.</string>
    <string name="national_id_16_digits">Agomba kuba imibare 16</string>
    <string name="irembo_fetch_failed">Kubona ibisabwa bya vuba ntibyashobotse</string>
    <string name="irembo_submit_failed">Kohereza ubusabe ntibyakunze</string>
    <string name="irembo_application_not_found">Ubusabe ntibubonetse cyangwa habaye ikibazo</string>
    <string name="application_not_found_title">Ubusabe ntibubonetse</string>
    <string name="request_already_sent_title">Gusaba kwawe kwaratwoherejwe</string>
    <string name="request_already_sent_message">Usanzwe ufite gusaba gukora kuri iyi serivisi. Tegereza ko gutunganywa mbere yo kohereza indi.</string>
    <string name="error_unknown">Habaye ikibazo kitazwi. Ongera ugerageze.</string>
    <string name="error_secure_connection">Ntibishoboka gushinga umurongo w\'umutekano. Vugurura porogaramu maze ugerageze.</string>
    <string name="error_connection_interrupted">Umurongo wabujijwe. Ongera ugerageze.</string>
    <string name="whatsapp_fetch_failed">Gushyiramo amatsinda ya WhatsApp ntibyakunze.</string>
    <string name="subscribe_failed">Kwiyandikisha byanze. Ongera ugerageze.</string>
    <string name="request_access_failed">Gusaba uburenganzira byanze.</string>
    <string name="cancel_subscription_failed">Guhagarika kwiyandikisha byanze.</string>
    <string name="refresh_failed">Kuvugurura biva kuri seriveri ntibyakunze.</string>
    <string name="offline_showing_downloaded">Nta interineti. Reba ibyo wamanuye.</string>
    <string name="no_offline_content">Nta byandikishijwe mu porogaramu bihari.</string>
    <string name="could_not_load_offline_content">Ntibishoboka gushyiramo ibyandikishijwe.</string>
    <string name="no_internet_no_offline">Nta interineti kandi nta byandikishijwe bihari.</string>
    <string name="exam_not_found">Ikizamini ntikibonetse kuri ID: %1$d</string>
    <string name="track_failed_title">Kurikirana ntibyakunze</string>
    <string name="invalid_otp">Shyiramo OTP y\'inyuguti 6 yujuje ibisabwa</string>
    <string name="terms_of_service">Amategeko y\'Akazi</string>
    <string name="registration_failed">Iyandikisho ryanze. Gerageza kongera.</string>
    <string name="first_name_required">Izina rya mbere rirakenewe</string>
    <string name="phone_required">Nimero ya telefone irakenewe</string>
    <string name="invalid_phone">Andika numero ya telefone ikoreshwa</string>
    <string name="password_mismatch">Amaijambobanga ntahura</string>
    <string name="password_empty_error">Nyamuneka wuzuze ibice byose</string>
    <string name="token_not_found">Ikimenyetso kirabura cyangwa ntabwo ari cyo.</string>
    <string name="password_reset_success">Ijambobanga ryasubijwe neza. Injira ukoresheje iryashya.</string>
    <string name="privacy_policy">Amabwiriza y\'Ibanga</string>
    <string name="request_access">Saba uburenganzira</string>
    <string name="delete_account">Siba konte</string>
    <string name="delete_account_text">
        Urashaka koko gusiba konte yawe? Iyi ngingo ntabwo ishobora gusubizwa inyuma kandi amakuru yawe yose azatakara.
    </string>
    <string name="delete_keep">Oya, Komeza</string>
    <string name="delete_account_delete">Yego, siba</string>
    <string name="aboutus">Ibyerekeye</string>
    <string name="instructions">Amabwiriza</string>
    <string name="irembo_services">Serivisi za Irembo</string>
    <string name="title_tests">Ibizamini Byakozwe</string>
    <string name="title_materials">Igazeti</string>
    <string name="title_test_questions">Ibibazo</string>
    <string name="title_test_result">Ibisubizo</string>
    <string name="instructions1">1. UBUSOBANURO BWA APULIKASIYO</string>
    <string name="instructions1_content">Iyi Apulikasiyo yitwa "ACTION DRIVING SCHOOL" ni apulikasiyo yigisha amategeko y\'umuhanda, igizwe n\ibibazo babaza mu kizamini cya porovisoiri (Uruhushya rw\'agateganyo)</string>
    <string name="instructions2">2. UKO APULIKASIYO IKORA</string>
    <string name="instructions2_content_1">1. Kugirango ukoreshe iyi apulikasiyo ugomba kubanza kwiyandikisha kuri apulikasiyo mugihe ukoze download bwa mbere aho usabwa kwandika amazina na nimero ya telefone yawe.</string>
    <string name="instructions2_content_2">2. Mugihe usanzwe wariyandikishije ntabwo wongera kwiyandikisha ahubwo ukanda ahanditse injira ugashyuramo nimweo ya telefone ubundi ugakanda "Emeza" ugahita ugera ahitwa dashboard usanga ibikubiyemo muri apulikasiyo.</string>
    <string name="instructions2_content_3">3. Gutangira kwiga ukanda ahanditse "Ibizamini" iyo uhafunguye hagizwe n\'ibizamini 21 buri kizamini kigizwe nibibabazo 20, ariko ikizamini cya mbere ni "Ubuntu" ibindi bisaba kwishyura.</string>
    <string name="instructions2_content_4">4. Iyo uri kwitoza muri iyi application ukanda mu gisubizo mu mugambo. Iyo ugikoze gihinduka icyatsi, naho iyo icyishe gihinduka umutuku kuko ari ukwitoza, uhita ubona igisubizo cy’ukuri warangiza, ugakanda ‘next’ ukaiya kukindi kibazo. Iyo ugeze ku cyanyuma, ukanda ‘soza kizamini’, igahita ubona amanota ugize, ugahita ukanda ahanditse ‘home’ ukaiya guhitamo indi exam wiga.</string>
    <string name="instructions3">3. UKO UZASANGA IBIMINI KURI MASHINE BIMEZE</string>
    <string name="instructions_3_conten_1">Nugera mu Kizamini cya porovisoiri kuri mashine uzasanga ibi bibazo biri muri apulikasiyo  ari nako bimeze mu kizaminini nta kibazo bazakubaza muri mu kizamini cya porovisoiri kitari hano muri apulikasiyo, Muguhihtamo igisubizo uzakanda mu (✔️) ugakomeza kukindi kibazo  ukande ahanditse *Next* ukomeze n\'ibindi bibazo. Iyo usoje ubirangije uzakanda ahanditse "Soza ikizamini" uzahita umenya amanota ugize ako kanya ushatse wanagenzura ibyo wishe nibyo wakoze  nkuko bimeze muri iyi apulikasiyo</string>
    <string name="instructions4">4. KWISHURA KUGIRANGO IBIZAMINI BYOSE BIFUNGUKE</string>
    <string name="instructions4_content_1">1. Nkuko nabisobanuye haruguru ikizamini cya mbere ni ubuntu ibindi 20 bisaba kwishyura 5000 RWF kuri 0782877442 cyangwa kuri MoMo Pay: 847318 ibaruye Kuri Alexis.</string>
    <string name="instructions4_content_2">2. Iyo umaze kwishyura usubira inyuma ugategereza iminota 5 ukongera ukajya ku bizamini usanga ibyo wishyuriye byafungutse ahari akagufuri gafunze kumutuku usanga kabaye akagufuri gafunguye mu ibara ry\'icyatsi. NB: ubikora ufite connection (Internet).</string>
    <string name="instructions_4_content_3">3. Muri apulikasiyo ushobora kwishyura make ikizamini 1 ni 100 Rwf kigafunguka umunsi 1, iyo wishyuye 1000 RWF tugufungurira ibizamini 10 bikamara iminsi 10, iyo wishyuye 2000 RWF tugufungurira ibizamin byose bikamara iminsi 25, iyo wishyuye 5000 tugufungurira ibizamini byose muri apulikasiyo kugera utsinze. </string>
    <string name="support_message">Ukeneye ubufasha Waduhamagara kuri: </string>
    <string name="learning_materials">Igazeti</string>
    <string name="contact_phone_1">+250782877442</string>
    <string name="contact_phone_2">+250722877442</string>
    <string name="admin_dashboard">Dashboard</string>
    <string name="admin_users">Users</string>
    <string name="admin_requests">Requests</string>
    <string name="admin_settings">Settings</string>
</resources>