<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/admin_dashboard" />

    <item
        android:id="@+id/nav_users"
        android:icon="@drawable/ic_profile"
        android:title="@string/admin_users" />

    <item
        android:id="@+id/nav_requests"
        android:icon="@drawable/ic_edit_document"
        android:title="@string/admin_requests" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_admin_settings"
        android:title="@string/admin_settings" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/title_profile" />

</menu>
