<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="28dp"
    app:cardElevation="8dp"
    app:strokeWidth="1dp"
    android:layout_margin="16dp">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:elevation="@dimen/cardview_default_radius"

      android:background="@color/colorPrimary"
      android:layout_gravity="center_horizontal"
      android:gravity="fill_horizontal">
      <com.google.android.material.button.MaterialButton
          android:id="@+id/btn_got_it"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:icon="@drawable/baseline_arrow_back_ios_24"
          app:iconTint="@color/black"


          android:padding="12dp"/>
      <TextView
          android:layout_width="wrap_content"
         android:textAlignment="center"
          android:layout_height="wrap_content"
          android:text="@string/instructions"
          android:textColor="@color/black"
          android:textStyle="bold"
   />
  </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">





            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textAlignment="center"
                android:layout_marginTop="35dp"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <!-- Instruction 1 Card -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                android:layout_marginBottom="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/instructions1"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/instructions1_content"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- Instruction 2 Card -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructions2"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:justificationMode="inter_word"
                        android:text="@string/instructions2_content_1"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/instructions2_content_2"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/instructions2_content_3"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/instructions2_content_4"
                        android:textAppearance="?attr/textAppearanceBody2"/>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Instruction 3 Card -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                android:layout_marginBottom="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructions3"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textStyle="bold"
                        android:justificationMode="inter_word"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/instructions_3_conten_1"
                        android:textAppearance="?attr/textAppearanceBody2"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Instruction 4 Card -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                android:layout_marginBottom="24dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructions4"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textStyle="bold"
                        android:justificationMode="inter_word"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/instructions4_content_1"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructions4_content_2"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:justificationMode="inter_word"
                        android:layout_marginBottom="16dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/instructions_4_content_3"
                        android:textAppearance="?attr/textAppearanceBody2"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <include
                layout="@layout/layout_contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp" />




        </LinearLayout>
    </ScrollView>
</com.google.android.material.card.MaterialCardView>
