<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.drivingschoolrwandaapp.ui.fragments.DashboardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_dashboardFragment_to_testsFragment"
            app:popUpToInclusive="false"
            app:destination="@id/testsFragment"/>
        <action
            android:id="@+id/action_dashboardFragment_to_materialsFragment"
            app:popUpToInclusive="false"
            app:destination="@id/materialsFragment"/>
        <action
            android:id="@+id/action_dashboardFragment_to_profileFragment"
            app:popUpToInclusive="false"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_iremboActivity"
            app:popUpToInclusive="false"
            app:destination="@id/iremboActivity" />

    </fragment>

    <fragment
        android:id="@+id/testsFragment"
        android:name="com.drivingschoolrwandaapp.ui.fragments.TestsFragment"
        android:label="@string/title_tests"
        tools:layout="@layout/fragment_tests">
        <action
            android:id="@+id/action_testsFragment_to_testQuestionsFragment"
            app:popUpToInclusive="false"
            app:destination="@id/testQuestionsFragment" />
    </fragment>


    <fragment
        android:id="@+id/materialsFragment"
        android:name="com.drivingschoolrwandaapp.ui.fragments.MaterialsFragment"
        android:label="@string/title_materials"
        tools:layout="@layout/fragment_materials" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.drivingschoolrwandaapp.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/testQuestionsFragment"
        android:name="com.drivingschoolrwandaapp.ui.fragments.TestQuestionsFragment"
        android:label="@string/title_test_questions"
        tools:layout="@layout/fragment_test_questions">
        <argument
            android:name="testId"
            app:argType="integer" />
        <action
            android:id="@+id/action_testQuestionsFragment_to_testResultFragment"
            app:popUpToInclusive="false"
            app:destination="@id/testResultFragment" />
    </fragment>

    <fragment
        android:id="@+id/testResultFragment"
        android:name="com.drivingschoolrwandaapp.ui.fragments.TestResultFragment"
        android:label="@string/title_test_result"
        tools:layout="@layout/fragment_test_result" >
        <action
            android:id="@+id/action_testResultFragment_to_testQuestionsFragment"
            app:popUpToInclusive="false"
            app:destination="@id/testQuestionsFragment" />
    </fragment>

    <activity
        android:id="@+id/iremboActivity"
        android:name="com.drivingschoolrwandaapp.ui.activities.IremboActivity"
        android:label="activity_irembo" />

    <action android:id="@+id/action_global_profileFragment"
        app:popUpToInclusive="false"
        app:destination="@id/profileFragment"/>
    
    <action android:id="@+id/action_global_testQuestionsFragment"
        app:popUpToInclusive="false"
        app:destination="@id/testQuestionsFragment" />

</navigation>
