<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/support_message"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@android:drawable/ic_menu_call"
        app:drawableTint="#33A1C9"
        android:drawablePadding="8dp"
        android:autoLink="phone"
        android:text="@string/contact_phone_1"
        android:textColorLink="#33A1C9"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:drawableStartCompat="@android:drawable/ic_menu_call"
        app:drawableTint="#33A1C9"
        android:drawablePadding="8dp"
        android:autoLink="phone"
        android:text="@string/contact_phone_2"
        android:textColorLink="#33A1C9"
        android:textSize="16sp" />
</LinearLayout>
